# evaluate_cbexigen

./: .gitignore  CMakeLists.txt  config.py  download-1158-20-xsds  gen_iso15118-20_code  install_all  install_cbiexigen  install_necessary_python_packages  mk_er  mk_er_diagram.ceps  rebuild-example  ubuntu_20_or_greater_install_python  v2gproc  xsd.ceps.lex
diagrams/: README.md
src/: v2g-example.cpp
